Fixed layout issue for Contact page

--- a/src/app/[locale]/contact/style.Contact.scss
+++ b/src/app/[locale]/contact/style.Contact.scss
@@ -2,7 +2,6 @@
 
 #contact {
   display: flex;
-  width: fit-content;
   height: 100vh;
   flex-direction: column;
   align-items: center;
